--- a/src/app/home-component/member-detail/member-detail.component.html
+++ b/src/app/home-component/member-detail/member-detail.component.html
@@ -1,10 +1,13 @@
 <div fxFlexFill fxLayout="column" class="scroll-container">
-    <div fxLayoutAlign ="start center" class="header primary-color-theme">
-        <img alt="Avengers pportal logo" src="../../assets/images/logo.jpg"/>
-        <div> Avengers Health Portal </div>
+    <div fxLayoutAlign ="space-between center" class="header primary-color-theme">
+        <div fxLayoutAlign ="start center">
+            <img alt="Avengers portal logo" src="assets/images/logo.jpg" (click) = homeComponentService.goToHome()/>
+            <div> Avengers Health Portal </div>
+        </div>
+        <img class="home-icon" alt="home icon" src="assets/images/home.jpg"  (click) = homeComponentService.goToHome()/>
     </div>
     <div fxFlex fxLayout="column" class="body-bg scroll-container">
-
+        <h3>memberDetailsFor: {{memberDetailsFor}}</h3>
     </div>
     <div fxLayoutAlign ="space-between start" class="footer primary-color-theme">
         <div>Fouder: Nick Furry</div>
