--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,7 @@ font-weight: 600;
 img {
     width: 50px;
     height: 50px;
+    cursor: pointer;
 }
 }
 
@@ -64,13 +65,10 @@ font-weight: 500;
 }
 
 .sub-heading {
-font-size: 16px;
-font-family: cursive;
-font-weight: 600;
-padding-bottom: 16px;
-}
-.primary-color-theme {
-background-color:  cadetblue;
+  font-size: 16px;
+  font-family: cursive;
+  font-weight: 600;
+  padding-bottom: 16px;
 }
 
 * {
