member info change, title change, member detail changes

--- a/src/app/home-component/home-component.html
+++ b/src/app/home-component/home-component.html
@@ -18,7 +18,7 @@
                             autocomplete="off"
                             matInput 
                             placeholder = "Enter search text"
-                            type="text"      
+                            type="tel"      
                             formControlName="admitNo"
                             #admitNum
                             [(ngModel)]="admitCardNo"
@@ -69,7 +69,7 @@
                             autocomplete="off"
                             matInput 
                             placeholder = "Enter search text"
-                            type="text"      
+                            type="tel"      
                             formControlName="phone"
                             #phoneNum
                             [(ngModel)]="phoneNo"        
