--- a/src/app/home-component/member-detail/member-detail.component.scss
+++ b/src/app/home-component/member-detail/member-detail.component.scss
@@ -2,3 +2,20 @@
     width: 25px;
     height: 25px;
 }
+
+.inner-padding {
+    padding-left: 16px !important;
+    padding-right: 16px !important;
+}
+
+.member-name {
+    padding-left: 16px;
+    label {
+font-size: 16px;
+font-weight: 400;
+    }
+    b {
+font-size: 20px;
+font-weight: 600;
+    }
+}
