patient search logic refinement and table columns alteration and data correction

--- a/src/app/home-component/member-detail/member-detail.component.html
+++ b/src/app/home-component/member-detail/member-detail.component.html
@@ -21,7 +21,7 @@
                         <ng-template matTabContent>
                             <div fxLayout="row" fxLayoutAlign="space-between start" class="inner-padding">
                                 <div>
-                                    <div><label>Admit card number: </label><b> #{{ item.admitCardNumber }}</b></div>
+                                    <div><label>Admit card number: </label><b> {{ item.admitCardNumber }}</b></div>
                                     <div><label>Age: </label><b> {{ item.age }} Years</b></div>
                                     <div><label>DOB: </label> <b> {{ item.dob }} </b></div>
                                     <div><label>Gender: </label><b> {{ item.gender }}</b></div>
