--- a/src/app/home-component/home-component.html
+++ b/src/app/home-component/home-component.html
@@ -102,14 +102,14 @@
                         <td mat-cell *matCellDef="let element">{{ element.admitCardNumber }}</td>
                     </ng-container>
             
-                    <ng-container matColumnDef="name">
-                        <th mat-header-cell *matHeaderCellDef> Name </th>
-                        <td mat-cell *matCellDef="let element"> {{ element.firstName}} {{ element.lastName }} </td>
+                    <ng-container matColumnDef="fName">
+                        <th mat-header-cell *matHeaderCellDef> First name </th>
+                        <td mat-cell *matCellDef="let element"> {{ element.firstName}} </td>
                     </ng-container>
 
-                    <ng-container matColumnDef="altName">
-                        <th mat-header-cell *matHeaderCellDef> Alternate name </th>
-                        <td mat-cell *matCellDef="let element"> {{ element.alternateName || '-' }} </td>
+                    <ng-container matColumnDef="lName">
+                        <th mat-header-cell *matHeaderCellDef> Last name </th>
+                        <td mat-cell *matCellDef="let element"> {{ element.lastName || '-' }} </td>
                     </ng-container>
             
                     <ng-container matColumnDef="gender">
