--- a/src/app/home-component/member-detail/member-detail.component.html
+++ b/src/app/home-component/member-detail/member-detail.component.html
@@ -12,7 +12,7 @@
             (error)="setDefaultPic();"/>
             <div class="member-name">
                 <div><label>Name: </label><b> {{ item.firstName }} {{ item.lastName }}</b></div>
-                <div *ngIf="item.alternateName"><label>Alternate name: </label> <b> {{ item.alternateName || '-' }} </b></div>
+                <div *ngIf="item.alternateName"><label>Alternate name: </label> <b> {{ item.alternateName }} </b></div>
             </div>
         </mat-card>
         <mat-card fxFlex  fxLayout="column" class="scroll-container" fxLayoutAlign ="start stretch" style="margin: 8px; padding: 0;">
@@ -22,11 +22,12 @@
                             <div fxLayout="row" fxLayoutAlign="space-between start" class="inner-padding">
                                 <div>
                                     <div><label>Admit card number: </label><b> {{ item.admitCardNumber }}</b></div>
-                                    <div><label>Age: </label><b> {{ item.age }} Years</b></div>
-                                    <div><label>DOB: </label> <b> {{ item.dob }} </b></div>
-                                    <div><label>Gender: </label><b> {{ item.gender }}</b></div>
-                                    <div><label>Height: </label> <b> {{ item.height }} </b></div>
-                                    <div><label>Weight: </label><b> {{ item.weight }}</b></div>
+                                    <div><label>Age: </label><b> {{ (ageFromDob(item.dob) + ' Years')  || 'Unknown'  }} </b></div>
+                                    <div><label>DOB: </label> <b> {{ item.dob || 'Unknown'  }} </b></div>
+                                    <div><label>Gender: </label><b> {{ item.gender || 'Unknown'  }}</b></div>
+                                    <div><label>Height: </label> <b> {{ item.height || 'Unknown'  }} </b></div>
+                                    <div><label>Weight: </label><b> {{ item.weight || 'Unknown'  }}</b></div>
+                                    <div><label>Race: </label><b> {{ item.race || 'Unknown'  }}</b></div>
                                 </div>
                                 <div>
                                     <div><label>Address: </label> <b> {{ item.address }} </b></div>
