--- a/src/app/home-component/search-info-dialog/search-info-dialog.component.html
+++ b/src/app/home-component/search-info-dialog/search-info-dialog.component.html
@@ -1,6 +1,6 @@
 <mat-dialog-content>
     <div fxLayout="row">
-        <img alt="dailog info" src="assets/images/info.jpg"/>
+        <mat-icon class="error">report</mat-icon>
         <h3 mat-dialog-title>{{ message }}</h3>
     </div>
   
