--- a/src/app/home-component/member-detail/member-detail.component.html
+++ b/src/app/home-component/member-detail/member-detail.component.html
@@ -1,10 +1,10 @@
 <div fxFlexFill fxLayout="column" class="scroll-container">
     <div fxLayoutAlign ="space-between center" class="header primary-color-theme">
         <div fxLayoutAlign ="start center">
-            <img alt="Avengers portal logo" src="assets/images/logo.jpg" (click) = homeComponentService.goToHome()/>
+            <img matTooltip="Home" matTooltipPosition="below" alt="Avengers portal logo" src="assets/images/logo.jpg" (click) = homeComponentService.goToHome()/>
             <div> Avengers Health Portal </div>
         </div>
-        <img class="home-icon" alt="home icon" src="assets/images/home.jpg"  (click) = homeComponentService.goToHome()/>
+        <mat-icon  matTooltip="Home" matTooltipPosition="below" (click) = homeComponentService.goToHome()>home</mat-icon>
     </div>
     <div fxFlex fxLayout="column" class="body-bg scroll-container">
         <mat-card fxLayoutAlign ="center center" class="card-padding" style="margin-bottom: 0;">
@@ -13,6 +13,7 @@
             <div class="member-name">
                 <div><label>Name: </label><b> {{ item.firstName }} {{ item.lastName }}</b></div>
                 <div *ngIf="item.alternateName"><label>Alternate name: </label> <b> {{ item.alternateName }} </b></div>
+                <div><label>Admit card number: </label><b> {{ item.admitCardNumber }} </b></div>
             </div>
         </mat-card>
         <mat-card fxFlex  fxLayout="column" class="scroll-container" fxLayoutAlign ="start stretch" style="margin: 8px; padding: 0;">
@@ -21,10 +22,11 @@
                         <ng-template matTabContent>
                             <div fxLayout="row" fxLayoutAlign="space-between start" class="inner-padding">
                                 <div>
-                                    <div><label>Admit card number: </label><b> {{ item.admitCardNumber }}</b></div>
-                                    <div><label>Age: </label><b> {{ (ageFromDob(item.dob) + ' Years')  || 'Unknown'  }} </b></div>
+                                    <div><label>Age: </label><b> {{ ageFromDob(item.dob) > 0 ? (ageFromDob(item.dob) + ' Year(s)') : 'Unknown'  }} </b></div>
                                     <div><label>DOB: </label> <b> {{ item.dob || 'Unknown'  }} </b></div>
                                     <div><label>Gender: </label><b> {{ item.gender || 'Unknown'  }}</b></div>
+                                </div>
+                                <div>
                                     <div><label>Height: </label> <b> {{ item.height || 'Unknown'  }} </b></div>
                                     <div><label>Weight: </label><b> {{ item.weight || 'Unknown'  }}</b></div>
                                     <div><label>Race: </label><b> {{ item.race || 'Unknown'  }}</b></div>
@@ -55,14 +57,61 @@
                             </div>
                         </ng-template>
                     </mat-tab>
-                    <mat-tab label="Three">
+                    <mat-tab label="Allergies/Syndromes">
                         <ng-template  matTabContent>
-                            <div  class="inner-padding">
-                            <h1>Some more tab content</h1>
+                            <div fxLayout="row" fxFlex fxLayoutAlign="start start" *ngIf="item.healthCondition && item.healthCondition.length > 0; else unKnown" class="inner-padding">
+                                <mat-accordion>
+                                    <mat-expansion-panel style="margin-bottom: 10px;" *ngFor="let hc of item.healthCondition">
+                                        <mat-expansion-panel-header>
+                                            <mat-panel-title>
+                                                {{hc.title}}
+                                            </mat-panel-title>
+                                            <mat-panel-description *ngIf="hc.description">
+                                                {{ hc.description }}
+                                            </mat-panel-description>
+                                        </mat-expansion-panel-header>
+                                        <div fxLayout="column">
+                                            <div>{{ hc.cause }}</div>
+                                            <em>Symptoms of {{hc.title}}:</em>
+                                            <ul style="margin-left: 30px;">
+                                                <li *ngFor="let list of hc.symptoms">{{ list }}</li>
+                                            </ul>
+                                        </div>                                    
+                                    </mat-expansion-panel>                                
+                                </mat-accordion>
+                            </div>
+                            <ng-template #unKnown>
+                                <div fxLayoutAlign="center" class="inner-padding">No known Allergies or Syndromes</div>
+                            </ng-template>
+                        </ng-template>
+                    </mat-tab>
+                    <mat-tab label="Special powers/abilities">
+                        <ng-template  matTabContent>
+                            <div fxLayout="row" class="inner-padding">
+                                <div fxFlex="70">
+                                    <strong>Powers:</strong>
+                                    <mat-list>
+                                        <mat-list-item *ngFor="let power of item.powers">
+                                        <div fxLayoutAlign="start center" fxFlex>
+                                            <span>{{power.power}}</span>
+                                            <mat-icon style="color: darkblue;" [matTooltip]="power.detail" matTooltipPosition="right" matListIcon>info_outline</mat-icon>
+                                            </div>
+                                        </mat-list-item>
+                                    </mat-list>
+                                </div>
+                                <mat-divider [vertical]="true"></mat-divider>
+                                <div style="padding-left: 16px;" fxFlex>
+                                    <strong>Abilities:</strong>
+                                    <mat-list>
+                                        <mat-list-item *ngFor="let ability of item.abilities">
+                                        <div> {{ability}} </div>
+                                        </mat-list-item>
+                                    </mat-list>
+                                </div>
                             </div>
                         </ng-template>
                     </mat-tab>
-                    <mat-tab label="Four">
+                    <mat-tab label="Wars/Battles">
                         <ng-template  matTabContent>
                             <div  class="inner-padding">
                             <h1>Some more tab content</h1>
